1. Fix handling zero values; 2. Some refactoring; 3. Draft of HoB export

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -36,13 +36,9 @@
     "sets = lotr.get_sets(conf)\n",
     "\n",
     "changes = False\n",
-    "for set_data in sets:\n",
-    "    set_id = set_data[lotr.SET_ID]\n",
-    "    set_name = set_data[lotr.SET_NAME]\n",
-    "    set_row = set_data[lotr.SET_ROW]\n",
-    "\n",
+    "for set_id, set_name in sets:\n",
     "    if conf['octgn_set_xml']:\n",
-    "        lotr.generate_octgn_set_xml(set_id, set_name, set_row)\n",
+    "        lotr.generate_octgn_set_xml(set_id, set_name)\n",
     "\n",
     "    if conf['ringsdb_csv']:\n",
     "        lotr.generate_ringsdb_csv(set_id, set_name)\n",
@@ -52,7 +48,7 @@
     "\n",
     "    lotr.copy_custom_images(conf, set_id, set_name)\n",
     "    for lang in conf['languages']:\n",
-    "        lotr.generate_xml(conf, set_id, set_name, set_row, lang)\n",
+    "        lotr.generate_xml(conf, set_id, set_name, lang)\n",
     "        lotr.update_xml(conf, set_id, set_name, lang)\n",
     "        new_hash, old_hash = lotr.calculate_hashes(set_id, set_name, lang)\n",
     "        if new_hash != old_hash:\n",
@@ -90,8 +86,7 @@
    "outputs": [],
    "source": [
     "timestamp = time.time()\n",
-    "for set_data in sets:\n",
-    "    set_id, set_name, _ = set_data\n",
+    "for set_id, set_name in sets:\n",
     "    for lang in conf['languages']:\n",
     "        skip_set, skip_ids = lotr.get_skip_info(set_id, set_name, lang)\n",
     "        if skip_set:\n",
