--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -111,11 +111,11 @@
     "\n",
     "        if 'makeplayingcards' in conf['outputs'][lang]:\n",
     "            lotr.generate_png800_bleedmpc(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_mpc(conf, set_id, set_name, lang)\n",
+    "            lotr.generate_mpc(conf, set_id, set_name, lang, lotr.DATA)\n",
     "\n",
     "        if 'drivethrucards' in conf['outputs'][lang]:\n",
     "            lotr.generate_300_bleeddtc(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_dtc(conf, set_id, set_name, lang)\n",
+    "            lotr.generate_dtc(conf, set_id, set_name, lang, lotr.DATA)\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
