Add possibility to process only selected rows

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -31,14 +31,14 @@
     "timestamp = time.time()\n",
     "lotr.reset_project_folders(conf)\n",
     "lotr.download_sheet(conf)\n",
-    "lotr.extract_data()\n",
+    "lotr.extract_data(conf)\n",
     "lotr.sanity_check()\n",
     "sets = lotr.get_sets(conf)\n",
     "\n",
     "changes = False\n",
     "for set_id, set_name in sets:\n",
     "    if conf['octgn_set_xml']:\n",
-    "        lotr.generate_octgn_set_xml(set_id, set_name)\n",
+    "        lotr.generate_octgn_set_xml(conf, set_id, set_name)\n",
     "\n",
     "    if conf['ringsdb_csv']:\n",
     "        lotr.generate_ringsdb_csv(set_id, set_name)\n",
