--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -35,6 +35,7 @@
     "lotr.sanity_check()\n",
     "sets = lotr.get_sets(conf)\n",
     "\n",
+    "strange_eons = False\n",
     "changes = False\n",
     "for set_id, set_name in sets:\n",
     "    if conf['octgn_set_xml']:\n",
@@ -48,6 +49,7 @@
     "\n",
     "    lotr.copy_custom_images(conf, set_id, set_name)\n",
     "    for lang in conf['languages']:\n",
+    "        strange_eons = True\n",
     "        lotr.generate_xml(conf, set_id, set_name, lang)\n",
     "        lotr.update_xml(conf, set_id, set_name, lang)\n",
     "        new_hash, old_hash = lotr.calculate_hashes(set_id, set_name, lang)\n",
@@ -62,8 +64,12 @@
     "        lotr.copy_octgn_outputs(conf)\n",
     "\n",
     "    lotr.create_project()\n",
+    "elif strange_eons:\n",
+    "    logging.info('No changes since the last run, skipping creating '\n",
+    "                 'Strange Eons project')\n",
     "else:\n",
-    "    logging.info('No changes since the last run, skipping')\n",
+    "    logging.info('No Strange Eons outputs, skipping creating Strange Eons '\n",
+    "                 'project')\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
