1. Apply new changes to SE setting; 2. implement a draft of scratch space

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -32,8 +32,8 @@
     "lotr.reset_project_folders(conf)\n",
     "lotr.download_sheet(conf)\n",
     "lotr.extract_data(conf)\n",
-    "lotr.sanity_check()\n",
     "sets = lotr.get_sets(conf)\n",
+    "lotr.sanity_check(sets)\n",
     "\n",
     "strange_eons = False\n",
     "changes = False\n",
