Remove old plugin support

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "timestamp = time.time()\n",
-    "lotr.reset_project_folders(conf)\n",
+    "lotr.reset_project_folders()\n",
     "lotr.download_sheet(conf)\n",
     "lotr.extract_data(conf)\n",
     "sets = lotr.get_sets(conf)\n",
