Add MBPrint support

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -120,28 +120,14 @@
     "            lotr.generate_mpc(conf, set_id, set_name, lang, lotr.DATA)\n",
     "\n",
     "        if 'drivethrucards' in conf['outputs'][lang]:\n",
-    "            lotr.generate_300_bleeddtc(conf, set_id, set_name, lang, skip_ids)\n",
+    "            lotr.generate_jpg300_bleeddtc(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_dtc(conf, set_id, set_name, lang, lotr.DATA)\n",
     "\n",
+    "        if 'mbprint' in conf['outputs'][lang]:\n",
+    "            lotr.generate_jpg800_bleedmbprint(conf, set_id, set_name, lang, skip_ids)\n",
+    "            lotr.generate_mbprint(conf, set_id, set_name, lang, lotr.DATA)\n",
+    "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now there should be the following outputs:\n",
-    "\n",
-    "- `Output/DB/<set name>.<language>/`: 300 dpi PNG images for general purposes.\n",
-    "- `Output/DriveThruCards/<set name>.<language>/`: `zip` and `7z` archives of 300 dpi JPG images to be printed on DriveThruCards.com.\n",
-    "- `Output/HallOfBeorn/<set name>.json`.\n",
-    "- `Output/MakePlayingCards/<set name>.<language>/`: `zip` and `7z` archives of 800 dpi PNG images to be printed on MakePlayingCards.com.\n",
-    "- `Output/OCTGN/<set name>/<octgn id>/set.xml`.\n",
-    "- `Output/OCTGN/<set name>/<set name>.<language>.o8c`: image packs for OCTGN (300 dpi PNG).\n",
-    "- `Output/PDF/<set name>.<language>/`: PDF files in `A4` and `letter` format for home printing.\n",
-    "- `Output/RingsDB/<set name>.csv`.\n",
-    "\n",
-    "Additionally, if you specified `octgn_destination_path`, `set.xml` files for OCTGN will be copied there."
    ]
   }
  ],
