Add skeleton of generating OCTGN quest decks functionality

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -41,6 +41,9 @@
     "    if conf['octgn_set_xml']:\n",
     "        lotr.generate_octgn_set_xml(conf, set_id, set_name)\n",
     "\n",
+    "    if conf['octgn_o8d']:\n",
+    "        lotr.generate_octgn_o8d(conf, set_id, set_name)\n",
+    "\n",
     "    if conf['ringsdb_csv']:\n",
     "        lotr.generate_ringsdb_csv(set_id, set_name)\n",
     "\n",
