Fix selected behavior

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -31,7 +31,7 @@
     "timestamp = time.time()\n",
     "lotr.reset_project_folders()\n",
     "lotr.download_sheet(conf)\n",
-    "lotr.extract_data(conf)\n",
+    "lotr.extract_data()\n",
     "sets = lotr.get_sets(conf)\n",
     "lotr.sanity_check(sets)\n",
     "\n",
@@ -45,10 +45,10 @@
     "        lotr.generate_octgn_o8d(conf, set_id, set_name)\n",
     "\n",
     "    if conf['ringsdb_csv']:\n",
-    "        lotr.generate_ringsdb_csv(set_id, set_name)\n",
+    "        lotr.generate_ringsdb_csv(conf, set_id, set_name)\n",
     "\n",
     "    if conf['hallofbeorn_json']:\n",
-    "        lotr.generate_hallofbeorn_json(set_id, set_name)\n",
+    "        lotr.generate_hallofbeorn_json(conf, set_id, set_name)\n",
     "\n",
     "    lotr.copy_custom_images(conf, set_id, set_name)\n",
     "    for lang in conf['languages']:\n",
