Update README and configuration values

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -62,10 +62,10 @@
     "        lotr.copy_raw_images(conf, set_id, set_name, lang)\n",
     "        lotr.copy_xml(set_id, set_name, lang)\n",
     "\n",
-    "if changes:\n",
-    "    if conf['octgn_set_xml'] and conf['octgn_destination_path']:\n",
-    "        lotr.copy_octgn_outputs(conf)\n",
+    "if conf['octgn_set_xml'] and conf['octgn_set_xml_destination_path']:\n",
+    "    lotr.copy_octgn_set_xml_outputs(conf)\n",
     "\n",
+    "if changes:\n",
     "    lotr.create_project()\n",
     "elif strange_eons:\n",
     "    logging.info('No changes since the last run, skipping creating '\n",
