--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -62,8 +62,7 @@
     "        lotr.copy_raw_images(conf, set_id, set_name, lang)\n",
     "        lotr.copy_xml(set_id, set_name, lang)\n",
     "\n",
-    "if conf['octgn_set_xml'] and conf['octgn_set_xml_destination_path']:\n",
-    "    lotr.copy_octgn_set_xml_outputs(conf)\n",
+    "lotr.copy_octgn_outputs(conf, sets)\n",
     "\n",
     "if changes:\n",
     "    lotr.create_project()\n",
