Add generic PNG outputs

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -129,6 +129,10 @@
     "            lotr.generate_jpg800_bleedmbprint(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_mbprint(conf, set_id, set_name, lang, lotr.DATA)\n",
     "\n",
+    "        if 'generic_png' in conf['outputs'][lang]:\n",
+    "            lotr.generate_png800_bleedgeneric(conf, set_id, set_name, lang, skip_ids)\n",
+    "            lotr.generate_generic_png(conf, set_id, set_name, lang, lotr.DATA)\n",
+    "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
   }
