Remove SaveXML macro

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -31,9 +31,9 @@
     "timestamp = time.time()\n",
     "lotr.reset_project_folders()\n",
     "lotr.download_sheet(conf)\n",
-    "lotr.extract_data()\n",
+    "lotr.extract_data(conf)\n",
     "sets = lotr.get_sets(conf)\n",
-    "lotr.sanity_check(sets)\n",
+    "lotr.sanity_check(conf, sets)\n",
     "\n",
     "strange_eons = False\n",
     "changes = False\n",
