Update logging format

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -10,7 +10,8 @@
     "import time\n",
     "import lotr\n",
     "\n",
-    "logging.basicConfig(level=logging.INFO, format='%(asctime)s: %(message)s')"
+    "logging.basicConfig(level=logging.INFO,\n",
+    "                    format='%(asctime)s %(levelname)s: %(message)s')"
    ]
   },
   {
