Generate RingsDB images; various fixes and improvements

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "        if 'db' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_db(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_db(set_id, set_name, lang)\n",
+    "            lotr.generate_db(set_id, set_name, lang, lotr.DATA, lotr.SETS)\n",
     "\n",
     "        if 'octgn' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_octgn(set_id, set_name, lang, skip_ids)\n",
