Generate card_data.json for discord bot

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -35,6 +35,7 @@
     "lotr.reset_project_folders()\n",
     "lotr.download_sheet(conf)\n",
     "lotr.extract_data(conf)\n",
+    "lotr.save_data_for_bot()\n",
     "sets = lotr.get_sets(conf)\n",
     "lotr.sanity_check(conf, sets)\n",
     "\n",
