1. Code refactoring. 2. Update discord bot

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -35,9 +35,9 @@
     "lotr.reset_project_folders()\n",
     "lotr.download_sheet(conf)\n",
     "lotr.extract_data(conf)\n",
-    "lotr.save_data_for_bot()\n",
     "sets = lotr.get_sets(conf)\n",
     "lotr.sanity_check(conf, sets)\n",
+    "lotr.save_data_for_bot(sets)\n",
     "\n",
     "strange_eons = False\n",
     "changes = False\n",
@@ -111,7 +111,7 @@
     "\n",
     "        if 'db' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_db(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_db(set_id, set_name, lang, lotr.DATA, lotr.SETS)\n",
+    "            lotr.generate_db(set_id, set_name, lang, lotr.DATA)\n",
     "\n",
     "        if 'octgn' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_octgn(set_id, set_name, lang, skip_ids)\n",
