--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -37,7 +37,7 @@
     "lotr.extract_data(conf)\n",
     "sets = lotr.get_sets(conf)\n",
     "lotr.sanity_check(conf, sets)\n",
-    "lotr.save_data_for_bot(sets)\n",
+    "lotr.save_data_for_bot(conf, sets)\n",
     "\n",
     "strange_eons = False\n",
     "changes = False\n",
