Update script outputs

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -111,11 +111,11 @@
     "\n",
     "        if 'db' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_db(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_db(set_id, set_name, lang, lotr.DATA)\n",
+    "            lotr.generate_db(conf, set_id, set_name, lang, lotr.DATA)\n",
     "\n",
     "        if 'octgn' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_octgn(set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_octgn(set_id, set_name, lang)\n",
+    "            lotr.generate_octgn(conf, set_id, set_name, lang)\n",
     "\n",
     "        if 'pdf' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_pdf(conf, set_id, set_name, lang, skip_ids)\n",
@@ -133,9 +133,9 @@
     "            lotr.generate_jpg800_bleedmbprint(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_mbprint(conf, set_id, set_name, lang, lotr.DATA)\n",
     "\n",
-    "        if 'generic_png' in conf['outputs'][lang]:\n",
+    "        if 'genericpng' in conf['outputs'][lang]:\n",
     "            lotr.generate_png800_bleedgeneric(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_generic_png(conf, set_id, set_name, lang, lotr.DATA)\n",
+    "            lotr.generate_genericpng(conf, set_id, set_name, lang, lotr.DATA)\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
