Fix NoneType error

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -54,7 +54,9 @@
     "    if conf['hallofbeorn_json']:\n",
     "        lotr.generate_hallofbeorn_json(conf, set_id, set_name)\n",
     "\n",
-    "    lotr.copy_custom_images(conf, set_id, set_name)\n",
+    "    if conf['languages']:\n",
+    "        lotr.copy_custom_images(conf, set_id, set_name)\n",
+    "\n",
     "    for lang in conf['languages']:\n",
     "        strange_eons = True\n",
     "        lotr.generate_xml(conf, set_id, set_name, lang)\n",
