Generate 800 dpi PDF files for printing

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -108,8 +108,11 @@
     "                         ' skipping', set_name, lang)\n",
     "            continue\n",
     "\n",
-    "        if conf['nobleed'][lang]:\n",
+    "        if conf['nobleed_300'][lang]:\n",
     "            lotr.generate_png300_nobleed(conf, set_id, set_name, lang, skip_ids)\n",
+    "\n",
+    "        if conf['nobleed_800'][lang]:\n",
+    "            lotr.generate_png800_nobleed(conf, set_id, set_name, lang, skip_ids)\n",
     "\n",
     "        if 'db' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_db(conf, set_id, set_name, lang, skip_ids)\n",
@@ -122,6 +125,10 @@
     "        if 'pdf' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_pdf(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_pdf(conf, set_id, set_name, lang)\n",
+    "\n",
+    "        if 'genericpng_pdf' in conf['outputs'][lang]:\n",
+    "            lotr.generate_png800_pdf(conf, set_id, set_name, lang, skip_ids)\n",
+    "            lotr.generate_genericpng_pdf(conf, set_id, set_name, lang)\n",
     "\n",
     "        if 'makeplayingcards' in conf['outputs'][lang]:\n",
     "            lotr.generate_png800_bleedmpc(conf, set_id, set_name, lang, skip_ids)\n",
