--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -37,7 +37,9 @@
     "sets = lotr.get_sets(conf)\n",
     "lotr.sanity_check(conf, sets)\n",
     "lotr.save_data_for_bot(conf)\n",
-    "lotr.reset_project_folders()\n",
+    "\n",
+    "if conf['languages']:\n",
+    "    lotr.reset_project_folders()\n",
     "\n",
     "strange_eons = False\n",
     "changes = False\n",
@@ -68,7 +70,8 @@
     "        lotr.copy_raw_images(conf, set_id, set_name, lang)\n",
     "        lotr.copy_xml(set_id, set_name, lang)\n",
     "\n",
-    "lotr.copy_octgn_outputs(conf, sets)\n",
+    "if conf['octgn_set_xml'] or conf['octgn_o8d']:\n",
+    "    lotr.copy_octgn_outputs(conf, sets)\n",
     "\n",
     "if changes:\n",
     "    lotr.create_project()\n",
