Add functionality to update test.ringsdb.com

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -73,6 +73,9 @@
     "if conf['octgn_set_xml'] or conf['octgn_o8d']:\n",
     "    lotr.copy_octgn_outputs(conf, sets)\n",
     "\n",
+    "if conf['ringsdb_csv'] and conf['update_ringsdb']:\n",
+    "    lotr.update_ringsdb(conf, sets)\n",
+    "\n",
     "if changes:\n",
     "    lotr.create_project()\n",
     "elif strange_eons:\n",
