Generate Rules PDF files

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -128,6 +128,10 @@
     "            lotr.generate_png300_octgn(set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_octgn(conf, set_id, set_name, lang)\n",
     "\n",
+    "        if 'rules_pdf' in conf['outputs'][lang]:\n",
+    "            lotr.generate_png300_rules_pdf(set_id, set_name, lang, skip_ids, lotr.DATA)\n",
+    "            lotr.generate_rules_pdf(conf, set_id, set_name, lang)\n",
+    "\n",
     "        if 'pdf' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_pdf(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_pdf(conf, set_id, set_name, lang)\n",
