--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -39,7 +39,7 @@
     "lotr.save_data_for_bot(conf)\n",
     "\n",
     "if conf['languages']:\n",
-    "    lotr.reset_project_folders()\n",
+    "    lotr.reset_project_folders(conf)\n",
     "\n",
     "strange_eons = False\n",
     "changes = False\n",
