Fix translated file names

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -122,14 +122,14 @@
     "\n",
     "        if 'db' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_db(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_db(conf, set_id, set_name, lang, lotr.DATA)\n",
+    "            lotr.generate_db(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
     "        if 'octgn' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_octgn(set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_octgn(conf, set_id, set_name, lang)\n",
     "\n",
     "        if 'rules_pdf' in conf['outputs'][lang]:\n",
-    "            lotr.generate_png300_rules_pdf(set_id, set_name, lang, skip_ids, lotr.DATA)\n",
+    "            lotr.generate_png300_rules_pdf(set_id, set_name, lang, skip_ids, lotr.translated_data(set_id, lang))\n",
     "            lotr.generate_rules_pdf(conf, set_id, set_name, lang)\n",
     "\n",
     "        if 'pdf' in conf['outputs'][lang]:\n",
@@ -142,19 +142,19 @@
     "\n",
     "        if 'makeplayingcards' in conf['outputs'][lang]:\n",
     "            lotr.generate_png800_bleedmpc(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_mpc(conf, set_id, set_name, lang, lotr.DATA)\n",
+    "            lotr.generate_mpc(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
     "        if 'drivethrucards' in conf['outputs'][lang]:\n",
     "            lotr.generate_jpg300_bleeddtc(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_dtc(conf, set_id, set_name, lang, lotr.DATA)\n",
+    "            lotr.generate_dtc(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
     "        if 'mbprint' in conf['outputs'][lang]:\n",
     "            lotr.generate_jpg800_bleedmbprint(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_mbprint(conf, set_id, set_name, lang, lotr.DATA)\n",
+    "            lotr.generate_mbprint(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
     "        if 'genericpng' in conf['outputs'][lang]:\n",
     "            lotr.generate_png800_bleedgeneric(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_genericpng(conf, set_id, set_name, lang, lotr.DATA)\n",
+    "            lotr.generate_genericpng(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
