Prepare inputs for Spanish database

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -38,7 +38,7 @@
     "lotr.sanity_check(conf, sets)\n",
     "lotr.save_data_for_bot(conf)\n",
     "\n",
-    "if conf['languages']:\n",
+    "if conf['output_languages']:\n",
     "    lotr.reset_project_folders(conf)\n",
     "\n",
     "strange_eons = False\n",
@@ -56,10 +56,13 @@
     "    if conf['hallofbeorn_json']:\n",
     "        lotr.generate_hallofbeorn_json(conf, set_id, set_name)\n",
     "\n",
-    "    if conf['languages']:\n",
+    "    if conf['spanishdb_csv']:\n",
+    "        lotr.generate_spanishdb_csv(conf, set_id, set_name)\n",
+    "\n",
+    "    if conf['output_languages']:\n",
     "        lotr.copy_custom_images(conf, set_id, set_name)\n",
     "\n",
-    "    for lang in conf['languages']:\n",
+    "    for lang in conf['output_languages']:\n",
     "        strange_eons = True\n",
     "        lotr.generate_xml(conf, set_id, set_name, lang)\n",
     "        lotr.update_xml(conf, set_id, set_name, lang)\n",
@@ -107,7 +110,7 @@
    "source": [
     "timestamp = time.time()\n",
     "for set_id, set_name in sets:\n",
-    "    for lang in conf['languages']:\n",
+    "    for lang in conf['output_languages']:\n",
     "        skip_set, skip_ids = lotr.get_skip_info(set_id, set_name, lang)\n",
     "        if skip_set:\n",
     "            logging.info('[%s, %s] No changes since the last run,'\n",
