1. Add French database to configuration.  2. Create a file when SE script finished.

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -56,6 +56,9 @@
     "    if conf['hallofbeorn_json']:\n",
     "        lotr.generate_hallofbeorn_json(conf, set_id, set_name)\n",
     "\n",
+    "    if conf['frenchdb_csv']:\n",
+    "        lotr.generate_frenchdb_csv(conf, set_id, set_name)\n",
+    "\n",
     "    if conf['spanishdb_csv']:\n",
     "        lotr.generate_spanishdb_csv(conf, set_id, set_name)\n",
     "\n",
