Copy DB outputs to destination folder

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -162,6 +162,9 @@
     "            lotr.generate_png800_bleedgeneric(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_genericpng(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
+    "if conf['db_destination_path'] and 'db' in conf['outputs']['English']:\n",
+    "    lotr.copy_db_outputs(conf, sets)\n",
+    "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
   }
