Copy OCTGN images to destination folder

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -165,6 +165,9 @@
     "if conf['db_destination_path'] and 'db' in conf['outputs']['English']:\n",
     "    lotr.copy_db_outputs(conf, sets)\n",
     "\n",
+    "if (conf['octgn_image_destination_path'] and 'octgn' in conf['outputs']['English']):\n",
+    "    lotr.copy_octgn_image_outputs(conf, sets)\n",
+    "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
   }
