Save last generated image timestamp

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import logging\n",
+    "import os\n",
     "import time\n",
     "import lotr\n",
     "\n",
@@ -168,8 +169,19 @@
     "if (conf['octgn_image_destination_path'] and 'octgn' in conf['outputs']['English']):\n",
     "    lotr.copy_octgn_image_outputs(conf, sets)\n",
     "\n",
+    "if conf['timestamp_path']:\n",
+    "    with open(os.path.join(conf['timestamp_path'], 'last_image'), 'w') as fobj:\n",
+    "        fobj.write(lotr.get_last_image_timestamp())\n",
+    "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
