Fix non-existent key

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -163,10 +163,10 @@
     "            lotr.generate_png800_bleedgeneric(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_genericpng(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
-    "if conf['db_destination_path'] and 'db' in conf['outputs']['English']:\n",
+    "if conf['db_destination_path'] and 'db' in conf['outputs'].get('English', {}):\n",
     "    lotr.copy_db_outputs(conf, sets)\n",
     "\n",
-    "if (conf['octgn_image_destination_path'] and 'octgn' in conf['outputs']['English']):\n",
+    "if conf['octgn_image_destination_path'] and 'octgn' in conf['outputs'].get('English', {}):\n",
     "    lotr.copy_octgn_image_outputs(conf, sets)\n",
     "\n",
     "if conf['timestamp_path']:\n",
