--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -169,8 +169,8 @@
     "if conf['octgn_image_destination_path'] and 'octgn' in conf['outputs'].get('English', {}):\n",
     "    lotr.copy_octgn_image_outputs(conf, sets)\n",
     "\n",
-    "if conf['timestamp_path']:\n",
-    "    with open(os.path.join(conf['timestamp_path'], 'last_image'), 'w') as fobj:\n",
+    "if conf['remote_logs_path']:\n",
+    "    with open(os.path.join(conf['remote_logs_path'], 'last_generated_image'), 'w') as fobj:\n",
     "        fobj.write(lotr.get_last_image_timestamp())\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
