--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -54,6 +54,9 @@
     "    if conf['ringsdb_csv']:\n",
     "        lotr.generate_ringsdb_csv(conf, set_id, set_name)\n",
     "\n",
+    "    if conf['dragncards_json']:\n",
+    "        lotr.generate_dragncards_json(conf, set_id, set_name)\n",
+    "\n",
     "    if conf['hallofbeorn_json']:\n",
     "        lotr.generate_hallofbeorn_json(conf, set_id, set_name)\n",
     "\n",
