1. Upload files to DragnCards, 2. Add wrappers for run_before_se and run_after_se scripts.

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -172,6 +172,9 @@
     "if conf['octgn_image_destination_path'] and 'octgn' in conf['outputs'].get('English', {}):\n",
     "    lotr.copy_octgn_image_outputs(conf, sets)\n",
     "\n",
+    "if conf['upload_dragncards'] and conf['dragncards_hostname'] and conf['dragncards_id_rsa_path']:\n",
+    "    lotr.upload_dragncards(conf, sets)\n",
+    "\n",
     "if conf['remote_logs_path']:\n",
     "    with open(os.path.join(conf['remote_logs_path'], 'last_generated_image'), 'w') as fobj:\n",
     "        fobj.write(lotr.get_last_image_timestamp())\n",
