--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -18,21 +18,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "conf = lotr.read_conf()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "timestamp = time.time()\n",
+    "if os.path.exists(lotr.PROJECT_CREATED_PATH):\n",
+    "    os.remove(lotr.PROJECT_CREATED_PATH)\n",
+    "\n",
+    "conf = lotr.read_conf()\n",
     "lotr.download_sheet(conf)\n",
     "lotr.extract_data(conf)\n",
     "sets = lotr.get_sets(conf)\n",
@@ -88,6 +81,8 @@
     "\n",
     "if changes:\n",
     "    lotr.create_project()\n",
+    "    with open(lotr.PROJECT_CREATED_PATH, 'w'):\n",
+    "        pass\n",
     "elif strange_eons:\n",
     "    logging.info('No changes since the last run, skipping creating '\n",
     "                 'Strange Eons project')\n",
@@ -174,10 +169,6 @@
     "\n",
     "if conf['upload_dragncards'] and conf['dragncards_hostname'] and conf['dragncards_id_rsa_path']:\n",
     "    lotr.upload_dragncards(conf, sets)\n",
-    "\n",
-    "if conf['remote_logs_path']:\n",
-    "    with open(os.path.join(conf['remote_logs_path'], 'last_generated_image'), 'w') as fobj:\n",
-    "        fobj.write(lotr.get_last_image_timestamp())\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
