--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -113,7 +113,7 @@
     "timestamp = time.time()\n",
     "for set_id, set_name in sets:\n",
     "    for lang in conf['output_languages']:\n",
-    "        skip_set, skip_ids = lotr.get_skip_info(set_id, set_name, lang)\n",
+    "        skip_set, skip_ids = lotr.get_skip_info(set_id, lang)\n",
     "        if skip_set:\n",
     "            logging.info('[%s, %s] No changes since the last run,'\n",
     "                         ' skipping', set_name, lang)\n",
@@ -161,14 +161,21 @@
     "            lotr.generate_png800_bleedgeneric(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_genericpng(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
-    "if conf['db_destination_path'] and 'db' in conf['outputs'].get('English', {}):\n",
-    "    lotr.copy_db_outputs(conf, sets)\n",
+    "if 'English' in conf['output_languages']:\n",
+    "    updated_sets = [s for s in sets if not lotr.get_skip_info(s[0], 'English')[0]]\n",
+    "else:\n",
+    "    updated_sets = []\n",
     "\n",
-    "if conf['octgn_image_destination_path'] and 'octgn' in conf['outputs'].get('English', {}):\n",
-    "    lotr.copy_octgn_image_outputs(conf, sets)\n",
+    "if (conf['db_destination_path'] and 'English' in conf['output_languages'] and\n",
+    "        'db' in conf['outputs']['English'] and updated_sets):\n",
+    "    lotr.copy_db_outputs(conf, updated_sets)\n",
     "\n",
-    "if conf['upload_dragncards'] and conf['dragncards_hostname'] and conf['dragncards_id_rsa_path']:\n",
-    "    lotr.upload_dragncards(conf, sets)\n",
+    "if (conf['octgn_image_destination_path'] and 'English' in conf['output_languages'] and\n",
+    "        'octgn' in conf['outputs']['English'] and updated_sets):\n",
+    "    lotr.copy_octgn_image_outputs(conf, updated_sets)\n",
+    "\n",
+    "if (conf['upload_dragncards'] and conf['dragncards_hostname'] and conf['dragncards_id_rsa_path']):\n",
+    "    lotr.upload_dragncards(conf, sets, updated_sets)\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
