--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -22,10 +22,28 @@
    "outputs": [],
    "source": [
     "timestamp = time.time()\n",
+    "\n",
+    "if not os.path.exists(lotr.RUN_BEFORE_SE_STARTED_PATH):\n",
+    "    with open(lotr.RUN_BEFORE_SE_STARTED_PATH, 'w'):\n",
+    "        pass\n",
+    "\n",
     "if os.path.exists(lotr.PROJECT_CREATED_PATH):\n",
     "    os.remove(lotr.PROJECT_CREATED_PATH)\n",
     "\n",
     "conf = lotr.read_conf()\n",
+    "\n",
+    "if (not conf['reprocess_all'] and conf['reprocess_all_on_error'] and\n",
+    "        os.path.exists(lotr.UPDATE_STARTED_PATH)):\n",
+    "    conf['reprocess_all'] = True\n",
+    "    logging.info('The previous update did not succeed, setting \"reprocess_all\" to \"true\"')\n",
+    "\n",
+    "if conf['reprocess_all'] and os.path.exists(lotr.UPDATE_STARTED_PATH):\n",
+    "    os.remove(lotr.UPDATE_STARTED_PATH)\n",
+    "\n",
+    "if not conf['reprocess_all']:\n",
+    "    with open(lotr.UPDATE_STARTED_PATH, 'w'):\n",
+    "        pass\n",
+    "\n",
     "lotr.download_sheet(conf)\n",
     "lotr.extract_data(conf)\n",
     "sets = lotr.get_sets(conf)\n",
@@ -83,12 +101,17 @@
     "    lotr.create_project()\n",
     "    with open(lotr.PROJECT_CREATED_PATH, 'w'):\n",
     "        pass\n",
-    "elif strange_eons:\n",
-    "    logging.info('No changes since the last run, skipping creating '\n",
-    "                 'Strange Eons project')\n",
     "else:\n",
-    "    logging.info('No Strange Eons outputs, skipping creating Strange Eons '\n",
-    "                 'project')\n",
+    "    if os.path.exists(lotr.UPDATE_STARTED_PATH):\n",
+    "        os.remove(lotr.UPDATE_STARTED_PATH)\n",
+    "\n",
+    "    if strange_eons:\n",
+    "        logging.info('No changes since the last run, skipping creating Strange Eons project')\n",
+    "    else:\n",
+    "        logging.info('No Strange Eons outputs, skipping creating Strange Eons project')\n",
+    "\n",
+    "if os.path.exists(lotr.RUN_BEFORE_SE_STARTED_PATH):\n",
+    "    os.remove(lotr.RUN_BEFORE_SE_STARTED_PATH)\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
@@ -176,6 +199,9 @@
     "\n",
     "if (conf['upload_dragncards'] and conf['dragncards_hostname'] and conf['dragncards_id_rsa_path']):\n",
     "    lotr.upload_dragncards(conf, sets, updated_sets)\n",
+    "\n",
+    "if os.path.exists(lotr.UPDATE_STARTED_PATH):\n",
+    "    os.remove(lotr.UPDATE_STARTED_PATH)\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
