1. Improve PDF files. 2. Improve sanity check.

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -162,11 +162,11 @@
     "\n",
     "        if 'pdf' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_pdf(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_pdf(conf, set_id, set_name, lang)\n",
+    "            lotr.generate_pdf(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
     "        if 'genericpng_pdf' in conf['outputs'][lang]:\n",
     "            lotr.generate_png800_pdf(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_genericpng_pdf(conf, set_id, set_name, lang)\n",
+    "            lotr.generate_genericpng_pdf(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
     "        if 'makeplayingcards' in conf['outputs'][lang]:\n",
     "            lotr.generate_png800_bleedmpc(conf, set_id, set_name, lang, skip_ids)\n",
