Improve reliability of run_all.bat

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -33,16 +33,12 @@
     "conf = lotr.read_conf()\n",
     "\n",
     "if (not conf['reprocess_all'] and conf['reprocess_all_on_error'] and\n",
-    "        os.path.exists(lotr.UPDATE_STARTED_PATH)):\n",
+    "        os.path.exists(lotr.PIPELINE_STARTED_PATH)):\n",
     "    conf['reprocess_all'] = True\n",
     "    logging.info('The previous update did not succeed, setting \"reprocess_all\" to \"true\"')\n",
     "\n",
-    "if conf['reprocess_all'] and os.path.exists(lotr.UPDATE_STARTED_PATH):\n",
-    "    os.remove(lotr.UPDATE_STARTED_PATH)\n",
-    "\n",
-    "if not conf['reprocess_all']:\n",
-    "    with open(lotr.UPDATE_STARTED_PATH, 'w'):\n",
-    "        pass\n",
+    "with open(lotr.PIPELINE_STARTED_PATH, 'w'):\n",
+    "    pass\n",
     "\n",
     "lotr.download_sheet(conf)\n",
     "lotr.extract_data(conf)\n",
@@ -102,8 +98,8 @@
     "    with open(lotr.PROJECT_CREATED_PATH, 'w'):\n",
     "        pass\n",
     "else:\n",
-    "    if os.path.exists(lotr.UPDATE_STARTED_PATH):\n",
-    "        os.remove(lotr.UPDATE_STARTED_PATH)\n",
+    "    if os.path.exists(lotr.PIPELINE_STARTED_PATH):\n",
+    "        os.remove(lotr.PIPELINE_STARTED_PATH)\n",
     "\n",
     "    if strange_eons:\n",
     "        logging.info('No changes since the last run, skipping creating Strange Eons project')\n",
@@ -200,8 +196,8 @@
     "if (conf['upload_dragncards'] and conf['dragncards_hostname'] and conf['dragncards_id_rsa_path']):\n",
     "    lotr.upload_dragncards(conf, sets, updated_sets)\n",
     "\n",
-    "if os.path.exists(lotr.UPDATE_STARTED_PATH):\n",
-    "    os.remove(lotr.UPDATE_STARTED_PATH)\n",
+    "if os.path.exists(lotr.PIPELINE_STARTED_PATH):\n",
+    "    os.remove(lotr.PIPELINE_STARTED_PATH)\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
