Refactor run_after_se.py

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -138,6 +138,8 @@
     "                         ' skipping', set_name, lang)\n",
     "            continue\n",
     "\n",
+    "        card_data = lotr.translated_data(set_id, lang)\n",
+    "\n",
     "        if conf['nobleed_300'][lang]:\n",
     "            lotr.generate_png300_nobleed(conf, set_id, set_name, lang, skip_ids)\n",
     "\n",
@@ -146,31 +148,31 @@
     "\n",
     "        if 'db' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_db(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_db(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
+    "            lotr.generate_db(conf, set_id, set_name, lang, card_data)\n",
     "\n",
     "        if 'octgn' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_octgn(set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_octgn(conf, set_id, set_name, lang)\n",
     "\n",
     "        if 'rules_pdf' in conf['outputs'][lang]:\n",
-    "            lotr.generate_png300_rules_pdf(set_id, set_name, lang, skip_ids, lotr.translated_data(set_id, lang))\n",
+    "            lotr.generate_png300_rules_pdf(set_id, set_name, lang, skip_ids, card_data)\n",
     "            lotr.generate_rules_pdf(conf, set_id, set_name, lang)\n",
     "\n",
     "        if 'pdf' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_pdf(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_pdf(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
+    "            lotr.generate_pdf(conf, set_id, set_name, lang, card_data)\n",
     "\n",
     "        if 'genericpng_pdf' in conf['outputs'][lang]:\n",
     "            lotr.generate_png800_pdf(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_genericpng_pdf(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
+    "            lotr.generate_genericpng_pdf(conf, set_id, set_name, lang, card_data)\n",
     "\n",
     "        if 'makeplayingcards' in conf['outputs'][lang]:\n",
     "            lotr.generate_png800_bleedmpc(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_mpc(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
+    "            lotr.generate_mpc(conf, set_id, set_name, lang, card_data)\n",
     "\n",
     "        if 'drivethrucards' in conf['outputs'][lang]:\n",
     "            lotr.generate_jpg300_bleeddtc(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_dtc(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
+    "            lotr.generate_dtc(conf, set_id, set_name, lang, card_data)\n",
     "\n",
     "        if 'mbprint' in conf['outputs'][lang]:\n",
     "            lotr.generate_jpg800_bleedmbprint(conf, set_id, set_name, lang, skip_ids)\n",
