Check actual sets in the project file

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -130,12 +130,23 @@
    "outputs": [],
    "source": [
     "timestamp = time.time()\n",
+    "\n",
+    "if os.path.exists(lotr.PROJECT_PATH):\n",
+    "    actual_sets = lotr.get_actual_sets()\n",
+    "else:\n",
+    "    actual_sets = []\n",
+    "\n",
     "for set_id, set_name in sets:\n",
     "    for lang in conf['output_languages']:\n",
     "        skip_set, skip_ids = lotr.get_skip_info(set_id, lang)\n",
     "        if skip_set:\n",
     "            logging.info('[%s, %s] No changes since the last run,'\n",
     "                         ' skipping', set_name, lang)\n",
+    "            continue\n",
+    "\n",
+    "        if (set_id, lang) not in actual_sets:\n",
+    "            logging.error('[%s, %s] Not found in the project file,'\n",
+    "                          ' skipping', set_name, lang)\n",
     "            continue\n",
     "\n",
     "        card_data = lotr.translated_data(set_id, lang)\n",
@@ -183,7 +194,8 @@
     "            lotr.generate_genericpng(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
     "if 'English' in conf['output_languages']:\n",
-    "    updated_sets = [s for s in sets if not lotr.get_skip_info(s[0], 'English')[0]]\n",
+    "    updated_sets = [s for s in sets if (s[0], 'English') in actual_sets\n",
+    "                    and not lotr.get_skip_info(s[0], 'English')[0]]\n",
     "else:\n",
     "    updated_sets = []\n",
     "\n",
