--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -43,7 +43,7 @@
     "lotr.download_sheet(conf)\n",
     "lotr.extract_data(conf)\n",
     "sets = lotr.get_sets(conf)\n",
-    "lotr.sanity_check(conf, sets)\n",
+    "sets = lotr.sanity_check(conf, sets)\n",
     "lotr.save_data_for_bot(conf)\n",
     "\n",
     "if conf['output_languages']:\n",
