Sync jupyter notebook

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -150,6 +150,7 @@
     "            continue\n",
     "\n",
     "        card_data = lotr.translated_data(set_id, lang)\n",
+    "        card_dict = lotr.full_card_dict()\n",
     "\n",
     "        if conf['nobleed_300'][lang]:\n",
     "            lotr.generate_png300_nobleed(conf, set_id, set_name, lang, skip_ids)\n",
@@ -193,6 +194,9 @@
     "            lotr.generate_png800_bleedgeneric(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_genericpng(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
+    "        if 'tts' in conf['outputs'][lang]:\n",
+    "            lotr.generate_tts(conf, set_id, set_name, lang, card_dict)\n",
+    "\n",
     "if 'English' in conf['output_languages']:\n",
     "    updated_sets = [s for s in sets if (s[0], 'English') in actual_sets\n",
     "                    and not lotr.get_skip_info(s[0], 'English')[0]]\n",
@@ -207,7 +211,11 @@
     "        'octgn' in conf['outputs']['English'] and updated_sets):\n",
     "    lotr.copy_octgn_image_outputs(conf, updated_sets)\n",
     "\n",
-    "if (conf['upload_dragncards'] and conf['dragncards_hostname'] and conf['dragncards_id_rsa_path']):\n",
+    "if (conf['tts_destination_path'] and 'English' in conf['output_languages'] and\n",
+    "        'tts' in conf['outputs']['English'] and updated_sets):\n",
+    "    lotr.copy_tts_outputs(conf, updated_sets)\n",
+    "\n",
+    "if conf['upload_dragncards'] and conf['dragncards_hostname'] and conf['dragncards_id_rsa_path']:\n",
     "    lotr.upload_dragncards(conf, sets, updated_sets)\n",
     "\n",
     "if os.path.exists(lotr.PIPELINE_STARTED_PATH):\n",
