Update TTS logging

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -151,6 +151,7 @@
     "\n",
     "        card_data = lotr.translated_data(set_id, lang)\n",
     "        card_dict = lotr.full_card_dict()\n",
+    "        scratch = set_id in lotr.FOUND_SCRATCH_SETS\n",
     "\n",
     "        if conf['nobleed_300'][lang]:\n",
     "            lotr.generate_png300_nobleed(conf, set_id, set_name, lang, skip_ids)\n",
@@ -195,7 +196,7 @@
     "            lotr.generate_genericpng(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
     "\n",
     "        if 'tts' in conf['outputs'][lang]:\n",
-    "            lotr.generate_tts(conf, set_id, set_name, lang, card_dict)\n",
+    "            lotr.generate_tts(conf, set_id, set_name, lang, card_dict, scratch)\n",
     "\n",
     "if 'English' in conf['output_languages']:\n",
     "    updated_sets = [s for s in sets if (s[0], 'English') in actual_sets\n",
