Generate Hall of Beorn outputs in all languages

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -64,14 +64,15 @@
     "    if conf['dragncards_json']:\n",
     "        lotr.generate_dragncards_json(conf, set_id, set_name)\n",
     "\n",
-    "    if conf['hallofbeorn_json']:\n",
-    "        lotr.generate_hallofbeorn_json(conf, set_id, set_name)\n",
-    "\n",
     "    if conf['frenchdb_csv']:\n",
     "        lotr.generate_frenchdb_csv(conf, set_id, set_name)\n",
     "\n",
     "    if conf['spanishdb_csv']:\n",
     "        lotr.generate_spanishdb_csv(conf, set_id, set_name)\n",
+    "\n",
+    "    if conf['hallofbeorn_json']:\n",
+    "        for lang in set(conf['output_languages'] + ['English']):\n",
+    "            lotr.generate_hallofbeorn_json(conf, set_id, set_name, lang)\n",
     "\n",
     "    if conf['output_languages']:\n",
     "        lotr.copy_custom_images(conf, set_id, set_name)\n",
