Verify Google Drive images

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -47,6 +47,7 @@
     "lotr.save_data_for_bot(conf)\n",
     "\n",
     "if conf['output_languages']:\n",
+    "    lotr.verify_images(conf)\n",
     "    lotr.reset_project_folders(conf)\n",
     "\n",
     "strange_eons = False\n",
