Fix redundant Hall of Beorn outputs

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -72,7 +72,7 @@
     "        lotr.generate_spanishdb_csv(conf, set_id, set_name)\n",
     "\n",
     "    if conf['hallofbeorn_json']:\n",
-    "        for lang in set(conf['output_languages'] + ['English']):\n",
+    "        for lang in (conf['output_languages'] or ['English']):\n",
     "            lotr.generate_hallofbeorn_json(conf, set_id, set_name, lang)\n",
     "\n",
     "    if conf['output_languages']:\n",
