--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "        if 'octgn' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_octgn(set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_octgn(conf, set_id, set_name, lang)\n",
+    "            lotr.generate_octgn(conf, set_id, set_name, lang, card_data)\n",
     "\n",
     "        if 'rules_pdf' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_rules_pdf(set_id, set_name, lang, skip_ids, card_data)\n",
